<resources>
    <string name="app_name">雨眠</string>

    <string name="save">保存</string>
    <string name="login">登录</string>
    <string name="userphone_hint">请输入手机号</string>
    <string name="usernickname_hint">请输入用户名</string>
    <string name="userpassword_hint">请输入密码</string>
    <string name="picture_code_hint">图片验证码</string>
    <string name="phone_code_hint">手机验证码</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="register_newuser">注册新用户</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_register">登陆/注册</string>
    <string name="personal_information">个人资料</string>
    <string name="head_img">头像</string>
    <string name="pet_name">昵称</string>
    <string name="change_nickname">修改昵称</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="user_sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="birth">1997-02-21</string>
    <string name="phone_number">手机号</string>
    <string name="phone">15150570952</string>
    <string name="email_address">邮箱</string>
    <string name="change_email">修改邮箱</string>
    <string name="email">714081644@qq.com</string>

    <string name="setting">设置</string>
    <string name="change_user_password">修改密码</string>
    <string name="user_oldPwd">原密码</string>
    <string name="user_newPwd">新密码</string>
    <string name="user_pwd_format">密码格式为8~16位数字、字母组合密码!</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="login_out">退出登陆</string>

    <string name="publish">发表</string>
    <string name="net_error">无网络连接，请检查网络!</string>
    <string name="data_error">没有数据啦，点我重试!</string>
    <string name="loading_data">正在加载...</string>

    <string name="simple_view_behavior">com.example.ben.rainy_night.ui.SimpleViewBehavior</string>
    <string name="translate_up_down_behavior">com.example.ben.rainy_night.ui.TranslateUpDownBehavior</string>
    <string name="_00_00">00:00</string>
    <string name="sleep">伴我睡</string>
    <string name="community">社区</string>
    <string name="business_card">名片</string>
    <string name="qr_business_card">二维码名片</string>
    <string name="login_firstly">请先登录哦</string>
    <string name="no_more_data">没有更多数据啦~~~</string>
    <string name="scaner_code_hint">将二维码对准扫描框即可自动扫描</string>
    <string name="comment_hint">说点什么吧...</string>
    <string name="send">发送</string>
    <string name="mine">我</string>
    <string name="today">今天</string>
    <string name="zero">0</string>
    <string name="no_comment"><![CDATA[空无一人快去,抢沙发吧 >o<!!]]></string>
    <string name="excellent_comment">精彩评论</string>
    <string name="send_phone_code">发送验证码</string>
    <string name="forgot_password">忘记密码</string>

    <string-array name="music_time">
        <item>0</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
