<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_bg"
        android:orientation="vertical">

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/pet_oldPwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableRight="@mipmap/ic_clear"
            android:hint="@string/user_oldPwd"
            android:inputType="textPassword"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/_9"
            android:textSize="15dp"
            app:funcType="canClear" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:background="@color/tab_unselect" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/pet_newPwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:drawableRight="@mipmap/ic_clear"
            android:hint="@string/user_newPwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/_9"
            android:textSize="15dp"
            app:funcType="canClear" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="5dp"
            android:background="@color/tab_unselect" />
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_pwd_format"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_changePwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/change_user_password"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>