<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/view" />

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_bg"
        android:orientation="vertical">

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/pet_forgot_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableRight="@mipmap/ic_clear"
            android:hint="@string/userphone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="@color/_9"
            android:textSize="15dp"
            app:funcType="canClear" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:background="@color/tab_unselect" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/pet_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="@string/userpassword_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/_9"
            android:textSize="15dp"
            app:eyeClose="@mipmap/pass_gone"
            app:eyeOpen="@mipmap/pass_visuable"
            app:funcType="canWatchPwd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:background="@color/tab_unselect" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/pet_forgot_phoneCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@null"
                android:drawableEnd="@mipmap/ic_clear"
                android:hint="@string/phone_code_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/_9"
                android:textSize="15sp"
                app:funcType="canClear" />

            <TextView
                android:id="@+id/tv_forgot_phoneCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/send_phone_code"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:background="@color/tab_unselect" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/change_user_password"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>