<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_rainy"
    android:orientation="vertical">

    <include layout="@layout/view" />

    <include layout="@layout/toolbar" />

    <View style="@style/ViewStyle"/>

    <RelativeLayout
        android:id="@+id/rela_setting_head"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_setting_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/tv_setting_name"
            style="@style/TextHint"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/iv_setting_head" />

        <ImageView
            style="@style/Img_Go"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp" />
    </RelativeLayout>

    <View
        style="@style/ViewStyle"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rela_setting_business_card"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/business_card"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_business_card"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

        <View style="@style/ViewStyle" />

        <RelativeLayout
            android:id="@+id/rela_setting_change_password"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/change_user_password"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <ImageView
                style="@style/Img_Go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

        <View style="@style/ViewStyle" />

        <RelativeLayout
            android:id="@+id/rela_setting_about_us"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/about_us"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <ImageView
                style="@style/Img_Go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

        <View style="@style/ViewStyle" />

        <RelativeLayout
            android:id="@+id/rela_setting_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/clear_cache"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_setting_cache"
                style="@style/TextHint"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/img" />

            <ImageView
                android:id="@+id/img"
                style="@style/Img_Go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp" />
        </RelativeLayout>

        <View style="@style/ViewStyle" />

        <View
            style="@style/ViewStyle"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_setting_login_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/login_out"
                android:textColor="@color/colorRed" />
        </LinearLayout>

        <View style="@style/ViewStyle" />
    </LinearLayout>
</LinearLayout>