<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_mobile_flag" />

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/pet_login_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@mipmap/ic_clear"
                android:hint="@string/userphone_hint"
                android:inputType="number"
                android:maxLength="11"
                android:textColorHint="@color/_9"
                android:textSize="15dp"
                app:funcType="canClear" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/tab_unselect" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_password_flag" />

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/pet_login_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/userpassword_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/_9"
                android:textSize="15dp"
                app:eyeClose="@mipmap/pass_gone"
                app:eyeOpen="@mipmap/pass_visuable"
                app:funcType="canWatchPwd" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/tab_unselect" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="注册新用户"
                android:textColor="#b0b8b2"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="21dp"
                android:text="@string/login_forget_pwd"
                android:textColor="#b0b8b2"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
